WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 59377
Fix OwnPtr strict errors in RenderStyle and make StyleRareInheritedData::textShadow an OwnPtr
https://bugs.webkit.org/show_bug.cgi?id=59377
Summary
Fix OwnPtr strict errors in RenderStyle and make StyleRareInheritedData::text...
James Robinson
Reported
2011-04-25 16:09:32 PDT
Fix OwnPtr strict errors in RenderStyle and make StyleRareInheritedData::textShadow an OwnPtr
Attachments
Patch
(8.14 KB, patch)
2011-04-25 16:10 PDT
,
James Robinson
no flags
Details
Formatted Diff
Diff
Patch
(12.81 KB, patch)
2011-04-25 21:58 PDT
,
James Robinson
no flags
Details
Formatted Diff
Diff
Patch
(19.86 KB, patch)
2011-04-26 16:43 PDT
,
James Robinson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2011-04-25 16:10:40 PDT
Created
attachment 90983
[details]
Patch
James Robinson
Comment 2
2011-04-25 16:12:17 PDT
Gonna let this one run through the EWS before landing.
Early Warning System Bot
Comment 3
2011-04-25 17:22:02 PDT
Attachment 90983
[details]
did not build on qt: Build output:
http://queues.webkit.org/results/8508392
Build Bot
Comment 4
2011-04-25 17:36:50 PDT
Attachment 90983
[details]
did not build on win: Build output:
http://queues.webkit.org/results/8506515
WebKit Review Bot
Comment 5
2011-04-25 18:52:47 PDT
Attachment 90983
[details]
did not build on chromium: Build output:
http://queues.webkit.org/results/8504862
WebKit Review Bot
Comment 6
2011-04-25 19:00:07 PDT
Attachment 90983
[details]
did not build on mac: Build output:
http://queues.webkit.org/results/8506538
WebKit Review Bot
Comment 7
2011-04-25 19:58:25 PDT
Attachment 90983
[details]
did not build on chromium: Build output:
http://queues.webkit.org/results/8505698
Collabora GTK+ EWS bot
Comment 8
2011-04-25 20:46:14 PDT
Attachment 90983
[details]
did not build on gtk: Build output:
http://queues.webkit.org/results/8503868
James Robinson
Comment 9
2011-04-25 21:01:34 PDT
AnimationBase has a function ptr to the setter which now takes a PassOwnPtr<>. I've fixed it locally, will check if it compiles now and upload a new patch. Thanks, EWS!
WebKit Review Bot
Comment 10
2011-04-25 21:23:00 PDT
> Thanks, EWS!
You're welcome.
James Robinson
Comment 11
2011-04-25 21:58:01 PDT
Created
attachment 91054
[details]
Patch
Eric Seidel (no email)
Comment 12
2011-04-25 22:01:34 PDT
Comment on
attachment 91054
[details]
Patch LGTM.
James Robinson
Comment 13
2011-04-25 22:05:22 PDT
Committed
r84877
: <
http://trac.webkit.org/changeset/84877
>
WebKit Review Bot
Comment 14
2011-04-25 22:11:09 PDT
Attachment 90983
[details]
did not build on chromium: Build output:
http://queues.webkit.org/results/8505740
WebKit Review Bot
Comment 15
2011-04-25 22:44:57 PDT
http://trac.webkit.org/changeset/84877
might have broken SnowLeopard Intel Release (Tests)
Csaba Osztrogonác
Comment 16
2011-04-26 00:27:03 PDT
It make a test fail at least of on SL, GTK, Qt bots: --- /Volumes/Data/WebKit-BuildSlave/snowleopard-intel-release-tests/build/layout-test-results/transitions/multiple-text-shadow-transition-expected.txt 2011-04-25 23:44:44.000000000 -0700 +++ /Volumes/Data/WebKit-BuildSlave/snowleopard-intel-release-tests/build/layout-test-results/transitions/multiple-text-shadow-transition-actual.txt 2011-04-25 23:44:44.000000000 -0700 @@ -1,2 +1,2 @@ Shadowed text -PASS: saw 5 shadows during the transition +FAIL: saw 1 shadows during the transition
Csaba Osztrogonác
Comment 17
2011-04-26 03:38:22 PDT
(In reply to
comment #15
)
>
http://trac.webkit.org/changeset/84877
might have broken SnowLeopard Intel Release (Tests)
Rolled out by
http://trac.webkit.org/changeset/84901
James Robinson
Comment 18
2011-04-26 16:43:13 PDT
Created
attachment 91178
[details]
Patch
James Robinson
Comment 19
2011-04-26 16:44:27 PDT
The test failed because I had mishandled ShadowData's linked list implementation. This patch handles the linked list correctly (using smart pointers instead of raw ptrs + delete calls) and I've actually compiled+ran the tests with it (how novel!).
Eric Seidel (no email)
Comment 20
2011-04-26 18:12:43 PDT
Comment on
attachment 91178
[details]
Patch OK!
WebKit Commit Bot
Comment 21
2011-04-27 00:01:43 PDT
The commit-queue encountered the following flaky tests while processing
attachment 91178
[details]
: http/tests/xmlhttprequest/basic-auth.html
bug 51613
(author:
ap@webkit.org
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 22
2011-04-27 00:04:43 PDT
Comment on
attachment 91178
[details]
Patch Clearing flags on attachment: 91178 Committed
r85027
: <
http://trac.webkit.org/changeset/85027
>
WebKit Commit Bot
Comment 23
2011-04-27 00:04:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug